--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,18 @@
   text-align: center;
 }
 
+/*TODO: get this ruleset immediatebelow to scss or something*/
+.suggestionCards {
+  background-size: cover !important;
+  width: 60vw;
+  height: 30vw;
+}
 
-
+.suggestionCardsH2 {
+  margin: auto;
+  color:whitesmoke;
+  text-shadow: .1vw .4vw black;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
