--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,51 @@
 }
 
 /*TODO: get this ruleset immediatebelow to scss or something*/
+.homeComponentDivBlur {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  filter: blur(10px);
+  z-index: 1
+}
+
+
+.homeComponentMessageSuccess {
+  position: fixed;
+  z-index: 2;
+  border: solid green;
+  background: rgba(36, 181, 53, 0.9);
+  height: auto;
+  padding: 12vw;
+  top: 40%;
+  
+  display: block;
+  width: 90%;
+  margin: auto 5%;
+}
+
+.homeComponentMessageFailure {
+  position: fixed;
+  z-index: 2;
+  border: solid red;
+  background: rgba(221, 11, 11, 0.9);
+  height: auto;
+  padding: 12vw;
+  top: 40%;
+  
+  display: block;
+  width: 90%;
+  margin: auto 5%;
+}
+
 .suggestionCards {
   background-size: cover !important;
-    width: 60vw;
-    height: 30vw;
+    width: 80vw;
+    height: 50vw;
     margin: 8vw auto;
     box-shadow: black 0vw 1vw 1vw;
 }
