--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+* {
+  box-sizing: border-box;
+} 
+/* body {
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+.content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: #ddd;
+}
+
+.dust {
+  /* position: absolute; */
+  position: relative;
+  width: 100%;
+}
+
 .App {
   text-align: center;
 }
