--- a/src/Fonts.css
+++ b/src/Fonts.css
@@ -5,7 +5,7 @@
 
   @font-face {
     font-family: "ComicBookRegular";
-    src: url("./assets//fonts/Comic Book.otf");
+    src: url("./assets/fonts/Komika_display.ttf");
   }
 
   @font-face {
