fixed graphical issue

--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,8 @@ div.App {
     rgba(0,0,0,0.6),
     rgba(0,0,0,0.6)
   ), url('/pictures/comicBackgrounds/blueDots.jpg');
-  height: 100%;
-  /* height: -webkit-fill-available; */
+  /* height: 100%; */
+  height: -webkit-fill-available;
 }
 
 #aboutSection {
