added some features

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@
 @import './scssFiles/id/loginDiv.scss';
 @import './scssFiles/id/loginForm.scss';
 @import './scssFiles/id/loginH2.scss';
+@import './scssFiles/id/loginSampleSection.scss';
 @import './scssFiles/id/searchComponentDiv.scss';
 @import './scssFiles/id/searchComponentInput.scss';
 @import './scssFiles/id/searchResultsUL.scss';
