--- a/src/scssFiles/id/aboutDiv.scss
+++ b/src/scssFiles/id/aboutDiv.scss
@@ -4,7 +4,7 @@
           rgba(0,0,0,0.6),
           rgba(0,0,0,0.6)
         ), url('/pictures/comicBackgrounds/blueDots.jpg');
-        /* height: 100%; */
-        height: -webkit-fill-available;
+        
+        height: -webkit-fill-available !important;
       
 }
