--- a/src/scssFiles/class/accountFormGroup.scss
+++ b/src/scssFiles/class/accountFormGroup.scss
@@ -1,5 +1,7 @@
 .accountFormGroup {
     input {
-        background-color: transparent;
+        background-color: rgba(0,0,0,0.7);
+        width: 70%;
+        margin: auto;
     }
 }
