--- a/src/scssFiles/id/loginForm.scss
+++ b/src/scssFiles/id/loginForm.scss
@@ -15,3 +15,10 @@
           text-align: center;
       }
   }
+
+  @media screen and (min-width: $tabletMinWidth) {
+      #loginForm {
+      width: 60%;
+      margin: auto;
+    }
+}
