got a modal method for the series/events working

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,7 @@
 @import './scssFiles/class/collapse.scss';
 @import './scssFiles/class/marvelCharacterCard.scss';
 @import './scssFiles/class/modal-content.scss';
+@import './scssFiles/class/modalGearDivClass.scss';
 @import './scssFiles/class/modalImage.scss';
 @import './scssFiles/class/suggestionCards.scss';
 @import './scssFiles/class/text-muted.scss';
